--- a/jaguar_teleop/CMakeLists.txt
+++ b/jaguar_teleop/CMakeLists.txt
@@ -27,7 +27,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
- INCLUDE_DIRS include
+# INCLUDE_DIRS include
  LIBRARIES jaguar_teleop
  CATKIN_DEPENDS joy roscpp
  DEPENDS system_lib
