--- a/odom_from_pose/CMakeLists.txt
+++ b/odom_from_pose/CMakeLists.txt
@@ -83,7 +83,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
+#  INCLUDE_DIRS include
 #  LIBRARIES odom_from_pose
  CATKIN_DEPENDS nav_msgs roscpp rospy std_msgs geometry_msgs tf
 #  DEPENDS system_lib
