--- a/jaguar_2dnav/CMakeLists.txt
+++ b/jaguar_2dnav/CMakeLists.txt
@@ -1,15 +1,11 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(odom_from_pose)
+project(jaguar_2dnav)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  nav_msgs
-  roscpp
-  rospy
-  std_msgs
-  geometry_msgs
+  move_base
   tf
 )
 
@@ -70,7 +66,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   nav_msgs#   std_msgs
+#   std_msgs  # Or other packages containing msgs
 # )
 
 ###################################
@@ -83,9 +79,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
-#  LIBRARIES odom_from_pose
- CATKIN_DEPENDS nav_msgs roscpp rospy std_msgs geometry_msgs tf
+#  INCLUDE_DIRS include
+#  LIBRARIES jaguar_2dnav
+#  CATKIN_DEPENDS move_base tf
 #  DEPENDS system_lib
 )
 
@@ -101,18 +97,66 @@ include_directories(
 )
 
 ## Declare a cpp library
-# add_library(odom_from_pose
-#   src/${PROJECT_NAME}/odom_from_pose.cpp
+# add_library(jaguar_2dnav
+#   src/${PROJECT_NAME}/jaguar_2dnav.cpp
 # )
 
 ## Declare a cpp executable
- add_executable(odom_from_pose_node src/odom_from_pose_node.cpp)
+# add_executable(jaguar_2dnav_node src/jaguar_2dnav_node.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(odom_from_pose_node odom_from_pose_generate_messages_cpp)
+# add_dependencies(jaguar_2dnav_node jaguar_2dnav_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
- target_link_libraries(odom_from_pose_node
-   ${catkin_LIBRARIES}
- )
+# target_link_libraries(jaguar_2dnav_node
+#   ${catkin_LIBRARIES}
+# )
+
+#############
+## Install ##
+#############
+
+# all install targets should use catkin DESTINATION variables
+# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
+
+## Mark executable scripts (Python etc.) for installation
+## in contrast to setup.py, you can choose the destination
+# install(PROGRAMS
+#   scripts/my_python_script
+#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
+
+## Mark executables and/or libraries for installation
+# install(TARGETS jaguar_2dnav jaguar_2dnav_node
+#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
+
+## Mark cpp header files for installation
+# install(DIRECTORY include/${PROJECT_NAME}/
+#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+#   FILES_MATCHING PATTERN "*.h"
+#   PATTERN ".svn" EXCLUDE
+# )
+
+## Mark other files for installation (e.g. launch and bag files, etc.)
+# install(FILES
+#   # myfile1
+#   # myfile2
+#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+# )
+
+#############
+## Testing ##
+#############
+
+## Add gtest based cpp test target and link libraries
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_jaguar_2dnav.cpp)
+# if(TARGET ${PROJECT_NAME}-test)
+#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
+# endif()
+
+## Add folders to be run by python nosetests
+# catkin_add_nosetests(test)
