--- a/jaguar_2dnav/config/local_costmap_params.yaml
+++ b/jaguar_2dnav/config/local_costmap_params.yaml
@@ -4,7 +4,7 @@ local_costmap:
 
   #Set the global and robot frames for the costmap
   global_frame: /map #maybe /odom but in a real robot
-  robot_base_frame: base_link
+  robot_base_frame: /base_link
 
   #Set the update and publish frequency of the costmap
   update_frequency: 10.0
